Glibc Syllable Changelog

* March 16th 2008 *

	o socketpair.c: New file. Taken from an older libiberty implementation.

* January 27th 2008 *

	o aio_cancel.c, aio_read64.c, aio_read.c, aio_write64.c, aio_write.c: New files. Emulate
	  basic async IO using pread() & pwrite()

* January 24th 2008 *

	o Makeconfig: Over-ride built-program-cmd
	o configure: Un-merged the *-*-syllable* handling patches to..
	o syllable/configure: Here. New file.
	o shlib-versions: Un-merged the *-*-syllable* definitions to..
	o syllable/shlib-versions: Here. New file.
	o timezone/zic.c: Use symlink() instead of link()
	o timezone/Makefile: Removed the old patches. We now process and install the zoneinfo data.

* January 15th 2008 *

	o Makeconfig: Over-ride the run-program-prefix variable so we don't try to invoke generated
	  programs with our non-existent ld.so

* December 26th 2007 *

	o tld.c: TLD destructors are now handled in a POSIX compliant manner.

* December 23rd 2007 *

	o tld.c: Fix/implement TLD destructors. The destructor list is maintained correctly on a
	  per-thread basis. If a destructor is registered for a given TLD it will now be called
	  during free_tld() and passed the last value of the TLD.
	o tld.c: Implemented __free_all_tlds(). All TLDs allocated to the calling thread will
	  be freed and and TLD destructors will be called.
	o exit_thread.c: New file. Call __free_all_tlds() before the exit_thread syscall.
	o syscalls.list: Remove exit_thread

* December 6th 2007 *

	o net/route.h: Removed. It conflicts with the system header.

* November 23rd 2007 *

	o bits/time.h: Include <posix/time.h> for the definition of CLOCKS_PER_SEC, don't redefine
	  it here.
	o bits/libc-lock.h: Provide __libc_lock_read() to get the scaler value of the lock. Required
	  for code that treats a __libc_once type as scaler I.e. sysdeps/posix/getaddrinfo.c
	o open_attrdir.c, open_indexdir.c, fopendir.c: Update to reflect the changes to the data member
	  in struct __dirstream